required html added

--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,8 +20,13 @@
 </head>
 <body>
 
-    <video src="video-container" muted autoplay loop>
-        <source src="/assets/back-vid.mp4">
+    <div class="link">
+        code
+    </div>
+
+    <video class="video-container" muted autoplay loop>
+        <source src="/assets/back-vid.mp4" type="video/mp4">
+        <source src="/assets/vid2.mp4">
     </video>
 
     <header>
@@ -28,7 +36,7 @@
         </nav>
 
         <form id="new-task-form">
-            <input type="text" id="new-task-input" placeholder="Anything ToDo">
+            <input type="text" id="new-task-input" placeholder="Anything ToDo?">
             <input type="submit" id="new-task-submit" value="Add Task">
         </form>
     </header>
@@ -42,7 +50,7 @@
         <section class="task-list">
 
             <div class="tasks">
-                <div class="task">
+                <!-- <div class="task">
                     <div class="content">
                         <input type="text" class="text" value="My task" readonly>
                     </div>
@@ -50,9 +58,9 @@
                         <button class="edit">Edit</button>
                         <button class="delete">Delete</button>
                     </div>
-                </div>
+                </div> -->
             </div>
-            
+
         </section>
 
     </main>
