--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
 
     <title>To-Do</title>
 
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
 
-    <div class="link">
-        code
-    </div>
+    <a class="link" href="https://github.com/Aham3d/TODO-LIST" target="_blank">
+        CODE/>
+    </a>
 
     <video class="video-container" muted autoplay loop>
         <source src="/assets/back-vid.mp4" type="video/mp4">
@@ -68,6 +68,6 @@
 
 
 
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
